# jungle_backend_rust

./: .env.example  API_REFERENCE.md  Cargo.toml  Dockerfile  README.md  deploy.ps1  deploy.sh  docker-compose.yml  fixup_lookups_label_keys.sql  fly.toml  seed.sql
.cargo/: config.toml
crates/ai-service/: Cargo.toml
crates/ai-service/src/: credits.rs  crypto.rs  handlers.rs  lib.rs  main.rs  routes.rs
crates/ai-service/src/providers/: anthropic.rs  cloudflare_ai.rs  factory.rs  gemini.rs  mod.rs  ocrspace.rs  openai.rs
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: lib.rs  main.rs  openapi.rs  proxy.rs  rate_limit.rs  routing.rs  security.rs  ws_proxy.rs
crates/api-gateway/tests/: routing_table.rs
crates/auth-service/: Cargo.toml
crates/auth-service/src/: main.rs  routes.rs
crates/auth-service/src/handlers/: health.rs  login.rs  logout.rs  me.rs  mod.rs  oauth_apps.rs  password.rs  public.rs  refresh.rs  register.rs  sessions.rs  social.rs  switch_account.rs  two_factor.rs  verify.rs
crates/auth-service/tests/: auth_flow.rs
crates/jobs-runner/: Cargo.toml
crates/jobs-runner/src/: cron.rs  main.rs
crates/jobs-runner/src/jobs/: ad_budget_check.rs  analytics_snapshot_daily.rs  auto_delete_old_messages.rs  birthday_notifications.rs  crypto_payment_reconciliation.rs  disappearing_messages_cleanup.rs  dlq_consumer.rs  erasure_processor.rs  event_reminders.rs  expire_pending_ads.rs  feed_ranking.rs  hashtag_trending.rs  live_stream_cleanup.rs  login_attempts_cleanup.rs  memories_notification.rs  mod.rs  moderation_dispatch.rs  newsletter_dispatcher.rs  notification_cleanup.rs  pagerank.rs  post_viewers_cleanup.rs  pro_subscription_check.rs  publish_scheduled_posts.rs  session_cleanup.rs  story_cleanup.rs  unmute_expired_conversations.rs  webhooks_dispatcher.rs  weekly_memories_digest.rs
crates/live-service/: Cargo.toml
crates/live-service/src/: main.rs  routes.rs
crates/messaging-service/: Cargo.toml
crates/messaging-service/src/: agora_token.rs  lib.rs  main.rs  routes.rs  twilio_token.rs
crates/messaging-service/src/handlers/: broadcasts.rs  calls.rs  conversations.rs  health.rs  messages.rs  mod.rs
crates/messaging-service/tests/: call_event_flow.rs
crates/notification-service/: Cargo.toml
crates/notification-service/src/: dispatch.rs  event_consumer.rs  lib.rs  main.rs  routes.rs
crates/notification-service/src/handlers/: announcements.rs  health.rs  mod.rs  newsletter.rs  notifications.rs  preferences.rs  push_tokens.rs  web_push_subscriptions.rs
crates/payment-service/: Cargo.toml
crates/payment-service/src/: lib.rs  main.rs  routes.rs
crates/payment-service/src/gateway/: mod.rs  signature.rs
crates/payment-service/src/gateway/providers/: aamarpay.rs  authorize_net.rs  bank_transfer.rs  braintree.rs  cashfree.rs  coinbase.rs  coinpayments.rs  flutterwave.rs  fortumo.rs  iyzipay.rs  mod.rs  ngenius.rs  payfast.rs  paypal.rs  paypro.rs  paypro_api.rs  paysera.rs  paystack.rs  razorpay.rs  securionpay.rs  stripe.rs  twocheckout.rs  yoomoney.rs
crates/payment-service/src/handlers/: creator.rs  health.rs  mod.rs  payments.rs  pro.rs  wallet.rs  webhooks.rs  withdrawals.rs
crates/post-service/: Cargo.toml
crates/post-service/src/: lib.rs  main.rs  millicast.rs  routes.rs
crates/post-service/src/handlers/: ads.rs  albums.rs  comments.rs  extras.rs  feed.rs  hashtags.rs  health.rs  live.rs  mod.rs  post_viewers.rs  post_xhr.rs  posts.rs  reactions.rs  reels.rs  search.rs  sharing.rs
crates/post-service/tests/: reels_routes_smoke.rs
crates/realtime-service/: Cargo.toml
crates/realtime-service/src/: event_consumer.rs  hub.rs  lib.rs  main.rs  routes.rs
crates/realtime-service/src/handlers/: health.rs  internal.rs  mod.rs  presence.rs  ws.rs
crates/realtime-service/tests/: ws_end_to_end.rs
crates/shared/: Cargo.toml
crates/shared/src/: audit.rs  auth.rs  config.rs  crypto.rs  db.rs  deep_links.rs  email.rs  email_templates.rs  errors.rs  events.rs  i18n.rs  internal_client.rs  lib.rs  metrics.rs  moderation.rs  pagination.rs  permissions.rs  points.rs  push.rs  rate_limit.rs  resilience.rs  sanitize.rs  search.rs  site_config.rs  sms.rs  storage.rs  telemetry.rs  test_helpers.rs  validation.rs  web_push.rs
crates/shared/src/models/: user.rs
crates/user-service/: Cargo.toml
crates/user-service/src/: main.rs  routes.rs
crates/user-service/src/handlers/: addresses.rs  extras.rs  friend_lists.rs  geocoding.rs  health.rs  mod.rs  professional.rs  profile.rs  search.rs  settings.rs  social.rs
docs/: OVERVIEW.md  README.md  api-gateway.md  architecture.md  auth.md  configuration.md  data-models.md  database.md  env-matrix.md  event-bus.md  internals.md  jobs.md  migration.md  observability.md  payment-gateways.md  production-flyio.md  resilience.md  security-audit.md  shared-crate.md  sms.md  storage.md
migrations/: 012_search_and_extras.sql  013_push_tokens_and_extras.sql  015_new_features.sql  20250410000001_initial_schema.sql  20250410000002_social_graph.sql  20250410000003_posts_content.sql  20250410000004_messaging.sql  20250410000005_media_stories.sql  20250410000006_notifications.sql  20250410000007_groups_pages_events.sql  20250410000008_content.sql  20250410000009_commerce.sql  20250410000010_payments_ads_config.sql  20250410000011_remaining.sql  20250410000012_admin_extras.sql  20250410000013_missing_php_tables.sql  20250410000014_admin_parity.sql  20250410000015_gap_parity.sql  20250410000016_admin_advanced.sql  20250410000017_final_gaps.sql  20250410000018_search_and_extras.sql  20250410000019_push_tokens_and_extras.sql  20250410000020_email_templates.sql  20250410000021_new_features.sql  20250410000024_final_gaps.sql  20260418000001_ai_credits.sql  20260418000002_oauth_state.sql  20260418000003_audit_and_dlq.sql  20260418000004_endpoints_gaps.sql  20260418000005_onboarding_progress.sql  20260418000006_newsletter_queue_and_cronruns.sql  20260418000007_users_extra_prefs.sql  20260419000001_story_highlights.sql  20260419000002_nullable_password.sql  20260421000001_scheduled_posts.sql  (+43 more)
(+119 files in other folders)
