[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { workspace = true }
axum = { workspace = true, features = ["ws"] }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
dashmap = "6"
tokio-tungstenite = "0.24"
futures-util = "0.3"
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
ipnet = "2"
