[package]
name = "auth-service"
version.workspace = true
edition.workspace = true

[features]
default = []
# Enable integration tests against a running auth-service instance
integration = []

[dependencies]
shared = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
bcrypt = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
sha1 = { workspace = true }
md5 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
