[package]
name = "jobs-runner"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { workspace = true }
time = { workspace = true }
