[package]
name = "jobs-runner"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { workspace = true }
time = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
async-nats = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
