[package]
name = "live-service"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { workspace = true }
jsonwebtoken = { workspace = true }
futures = { workspace = true }
