[package]
name = "messaging-service"
version.workspace = true
edition.workspace = true

[dev-dependencies]
async-trait = { workspace = true }

[dependencies]
shared = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }
redis = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
crc32fast = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
jsonwebtoken = { workspace = true }
