[package]
name = "notification-service"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
