[package]
name = "payment-service"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }
redis = { workspace = true }
rust_decimal = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
base64 = { workspace = true }
md5 = { workspace = true }
serde_urlencoded = { workspace = true }
urlencoding = { workspace = true }
