[package]
name = "realtime-service"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { workspace = true }
axum = { workspace = true, features = ["ws"] }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { workspace = true }
jsonwebtoken = { workspace = true }
futures-util = "0.3"
dashmap = "6"
