[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
bcrypt = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
validator = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rust_decimal = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
ammonia = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }
prometheus = { workspace = true }
lettre = { workspace = true }
base64 = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
